--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
-body{
-  background-color: red;
-}
+@import "Partials/variables";
+@import "Partials/common";
+// header_section
+@import "Partials/topNavBar";
+// /header_section
