--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -1,8 +1,23 @@
 // Containers
 .container_l{
-  background-color: lightgray;
   max-width: 900px;
   margin: 0 auto;
+}
+// Margin Top
+@for $i from 1 through 15 { .mt-#{$i} {
+margin-top: 5px * $i; }
+}
+// Margin Right
+@for $i from 1 through 15 { .mr-#{$i} {
+margin-right: 5px * $i; }
+}
+// Margin Bottom
+@for $i from 1 through 15 { .mb-#{$i} {
+margin-bottom: 5px * $i; }
+}
+// Margin Left
+@for $i from 1 through 15 { .ml-#{$i} {
+margin-left: 5px * $i; }
 }
 // Padding Top
 @for $i from 1 through 15 { .pt-#{$i} {
