--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -1,3 +1,13 @@
+// Reset
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+// /Reset
+body{
+  font-family: 'Roboto', sans-serif;
+}
 // Containers
 .container_l{
   max-width: 900px;
