--- a/src/Partials/_bottomNavBar.scss
+++ b/src/Partials/_bottomNavBar.scss
@@ -1,18 +1,21 @@
 .bottom_nav_bar{
   background-color: red;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   & .logo{
     background-color: yellow;
     width: 150px;
     height: 60px;
+    display: flex;
+    align-items: center;
     & img{
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
     }
   }
   & .menu{
-    background-color: blue;
+    background-color: orange;
+    & li{
+      font-size: $parXs;
+      font-weight: 600;
+    }
   }
 }
