--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -3,6 +3,7 @@ $mainA:#69bf14; //green
 $mainB:#1975c0; //blue
 $white:#fff;
 // Pharagraphs Font
+$parXxs: 8px;
 $parXs: 10px;
 // Icon Size
 $iconS:11px;
