--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,9 +1,20 @@
 // Main Colors
 $mainA:#69bf14; //green
 $mainB:#1975c0; //blue
+$gray400:#6b6b6b;
 $white:#fff;
-// Pharagraphs Font
+// Text Font
 $parXxs: 8px;
 $parXs: 10px;
+$titleL:40px;
+// Font Weight
+$weightM:600;
+$weightL:800;
+// Letter Spacing
+$spacingM:1px;
+// Text UPPERCASE
+$txt_Trsf:uppercase;
 // Icon Size
 $iconS:11px;
+// Border Radius
+$radiusM:15px;
