--- a/src/app.scss
+++ b/src/app.scss
@@ -3,4 +3,7 @@
 // header_section
 @import "Partials/topNavBar";
 @import "Partials/bottomNavBar";
+@import "Partials/hero";
 // /header_section
+@import "Partials/paddingMargin";
+@import "Partials/displayFlex";
