--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -3,6 +3,7 @@ $mainA:#69bf14; //green
 $mainB:#1975c0; //blue
 $gray400:#6b6b6b;
 $white:#fff;
+$black:#000;
 // Text Font
 $parXxs: 8px;
 $parXs: 10px;
