--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -7,10 +7,12 @@ $black:#000;
 // Text Font
 $parXxs: 8px;
 $parXs: 10px;
+$parS:12px;
 $titleL:40px;
 // Font Weight
 $weightM:600;
 $weightL:800;
+$weightS:300;
 // Letter Spacing
 $spacingM:1px;
 // Text UPPERCASE
