--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,7 @@
 @import "Partials/topNavBar";
 @import "Partials/bottomNavBar";
 @import "Partials/hero";
+@import "Partials/ctaSection";
 // /header_section
 @import "Partials/paddingMargin";
 @import "Partials/displayFlex";
