Box Structure setted & upper footer starting

--- a/src/Partials/_hero.scss
+++ b/src/Partials/_hero.scss
@@ -1,8 +1,8 @@
 .hero_wrapper{
   height: 500px;
   position: relative;
-  // background-image: url('../img/herobackground.jpg');
-  background-image: url('https://avada.theme-fusion.com/movers/wp-content/uploads/sites/108/2018/06/avada-movers-homeherobackground-final.jpg');
+  background-image: url('../img/herobackground.jpg');
+  // background-image: url('https://avada.theme-fusion.com/movers/wp-content/uploads/sites/108/2018/06/avada-movers-homeherobackground-final.jpg');
   background-repeat: no-repeat;
   background-position: top left;
   background-size: cover;
