--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -8,6 +8,7 @@ $black:#000;
 $parXxs: 8px;
 $parXs: 10px;
 $parS:12px;
+$titleXs:12px;
 $titleL:40px;
 // Font Weight
 $weightM:600;
@@ -17,7 +18,11 @@ $weightS:300;
 $spacingM:1px;
 // Text UPPERCASE
 $txt_Trsf:uppercase;
+$txtCap: capitalize;
 // Icon Size
+$iconXs:8px;
 $iconS:11px;
 // Border Radius
 $radiusM:15px;
+// Line Height
+$heightM:20px;
