--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,7 @@
 // /header_section
 // footer
 @import "Partials/topFooter";
+@import "Partials/bottomFooter";
 // /footer
 @import "Partials/paddingMargin";
 @import "Partials/displayFlex";
