--- a/src/Partials/_displayFlex.scss
+++ b/src/Partials/_displayFlex.scss
@@ -15,3 +15,8 @@
   display: flex;
   align-items: center;
 }
+// Display Flex Directio column
+.flex_col{
+  display: flex;
+  flex-direction: column;
+}
