bottom footer - upper sec setted and styled

--- a/src/Partials/_paddingMargin.scss
+++ b/src/Partials/_paddingMargin.scss
@@ -18,6 +18,10 @@ margin-left: 5px * $i; }
 @for $i from 1 through 15 { .pt-#{$i} {
 padding-top: 5px * $i; }
 }
+// Padding Right
+@for $i from 1 through 15 { .pr-#{$i} {
+padding-right: 5px * $i; }
+}
 // Padding Bottom
 @for $i from 1 through 15 { .pb-#{$i} {
 padding-bottom: 5px * $i; }
