--- a/src/Partials/_bottomFooter.scss
+++ b/src/Partials/_bottomFooter.scss
@@ -1,3 +1,12 @@
 .bottom_footer{
   background-color: $mainA;
+  & .upper_sec{
+    & li:not(:last-child){
+      border-right: 1px solid $white;
+    }
+    & a{
+      color: $white;
+      font-size: $parXxs;
+    }
+  }
 }
