--- a/src/Partials/_topFooter.scss
+++ b/src/Partials/_topFooter.scss
@@ -9,7 +9,7 @@
       }
       & h4{
         text-transform: $txt_Trsf;
-        font-size: $titleXs;
+        font-size: $parS;
         flex-basis: 30px;
       }
       & p{
