setting par (above_below_title) 4 all main sections

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,15 +1,22 @@
 @import "Partials/variables";
 @import "Partials/common";
 @import "Partials/structures";
+@import "Partials/typo";
+@import "Partials/paddingMargin";
+@import "Partials/displayFlex";
 // header_section
 @import "Partials/topNavBar";
 @import "Partials/bottomNavBar";
 @import "Partials/hero";
 @import "Partials/ctaSection";
 // /header_section
+// main_section
+@import "Partials/firstSection";
+@import "Partials/secondSection";
+@import "Partials/fourthSection";
+@import "Partials/fifthSection";
+// /main_section
 // footer
 @import "Partials/topFooter";
 @import "Partials/bottomFooter";
 // /footer
-@import "Partials/paddingMargin";
-@import "Partials/displayFlex";
