1,2,4,5 section markUp setting

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@
 @import "Partials/ctaSection";
 // /header_section
 // main_section
+@import "Partials/commonsMainSections";
 @import "Partials/firstSection";
 @import "Partials/secondSection";
 @import "Partials/fourthSection";
