--- a/src/Partials/_firstSection.scss
+++ b/src/Partials/_firstSection.scss
@@ -1,8 +1,3 @@
-.main_section{
-  & .above_below_title{
-    color: $gray300;
-  }
-  & .first_section{
-    background-color: coral;
-  }
+.first_section{
+  background-color: coral;
 }
