--- a/src/Partials/_topFooter.scss
+++ b/src/Partials/_topFooter.scss
@@ -2,6 +2,7 @@
   background-color: $white;
   border-top: 10px solid $mainA;
   & .container_l{
+    display: flex;
     & .box{
       & .par_mage{
         justify-content: space-between;
