1,2,4,5 sec h2 setted and styled

--- a/src/Partials/_typo.scss
+++ b/src/Partials/_typo.scss
@@ -15,5 +15,8 @@
 }
 // 4 h2's
 .section_title{
-  
+  color: $mainA;
+  font-size: $titleH2;
+  text-transform: $txtCap;
+  font-weight: $weightL;
 }
