--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -9,9 +9,11 @@ $black:#000;
 $parXxs: 8px;
 $parXs: 10px;
 $parS:12px;
+$titleH2:27px;
 $titleL:40px;
 // Font Weight
 $weightM:600;
+$weightMl:700;
 $weightL:800;
 $weightS:300;
 // Letter Spacing
