--- a/src/Partials/_paddingMargin.scss
+++ b/src/Partials/_paddingMargin.scss
@@ -26,3 +26,7 @@ padding-right: 5px * $i; }
 @for $i from 1 through 15 { .pb-#{$i} {
 padding-bottom: 5px * $i; }
 }
+// Padding Left
+@for $i from 1 through 15 { .pl-#{$i} {
+padding-left: 5px * $i; }
+}
