--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,6 +1,7 @@
 // Main Colors
 $mainA:#69bf14; //green
 $mainB:#1975c0; //blue
+$gray200:#e9e9e9;
 $gray300:#afaeae;
 $gray400:#6b6b6b;
 $white:#fff;
