--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -18,6 +18,8 @@ $weightM:600;
 $weightMl:700;
 $weightL:800;
 $weightS:300;
+// Font Style
+$italic: italic;
 // Letter Spacing
 $spacingM:1px;
 // Text UPPERCASE
