--- a/src/Partials/_fifthSection.scss
+++ b/src/Partials/_fifthSection.scss
@@ -1,3 +1,3 @@
-.fifth_section{
-  background-color: pink;
+.fifth_section_wrapper{
+  background-image: url('../img/avada-movers-request-quote-background.jpg');
 }
