--- a/src/Partials/_firstSection.scss
+++ b/src/Partials/_firstSection.scss
@@ -1,3 +1,4 @@
-.first_section{
-  background-color: coral;
+.first_section_wrapper{
+  background: rgb(251,252,254);
+  background: linear-gradient(180deg, rgba(251,252,254,1) 0%, rgba(241,245,248,1) 100%);
 }
