--- a/src/Partials/_fourthSection.scss
+++ b/src/Partials/_fourthSection.scss
@@ -1,5 +1,6 @@
-.fourth_section{
-  background: lightgreen;
+.fourth_section_wrapper{
+  background-image: url('../img/avada-movers-testimonial-background.jpg');
+  background-size: cover;
   & .box{
     & img{
       border-radius: 50%;
