ease section setted&styled

--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,6 +1,8 @@
 // Main Colors
 $mainA:#69bf14; //green
 $mainB:#1975c0; //blue
+$green200:#77c932;
+$green400:#5ca323;
 $gray200:#e9e9e9;
 $gray300:#afaeae;
 $gray400:#6b6b6b;
