--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,7 @@
 @import "Partials/commonsMainSections";
 @import "Partials/firstSection";
 @import "Partials/secondSection";
+@import "Partials/easeSection";
 @import "Partials/fourthSection";
 @import "Partials/fifthSection";
 // /main_section
