--- a/src/app.scss
+++ b/src/app.scss
@@ -4,17 +4,20 @@
 @import "Partials/typo";
 @import "Partials/paddingMargin";
 @import "Partials/displayFlex";
-// header_section
+@import "Partials/atButtons";
+@import "Partials/atLinks";
+@import "Partials/atIcons";
+// header
 @import "Partials/topNavBar";
 @import "Partials/bottomNavBar";
 @import "Partials/hero";
 @import "Partials/ctaSection";
-// /header_section
-// main_section
+// /header
+// main
 @import "Partials/mainCommon";
 @import "Partials/mainSpecifics";
 @import "Partials/mainBackgrounds";
-// /main_section
+// /main
 // footer
 @import "Partials/topFooter";
 @import "Partials/bottomFooter";
