--- a/src/Partials/_displayFlex.scss
+++ b/src/Partials/_displayFlex.scss
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
 }
-// Display Flex Directio column
+// Display Flex Direction column
 .flex_col{
   display: flex;
   flex-direction: column;
