Replace Partials Header Files with only one File

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,14 +4,11 @@
 @import "Partials/typo";
 @import "Partials/paddingMargin";
 @import "Partials/displayFlex";
-@import "Partials/atButtons";
-@import "Partials/atLinks";
-@import "Partials/atIcons";
+@import "Partials/buttons";
+@import "Partials/links";
+@import "Partials/icons";
 // header
-@import "Partials/topNavBar";
-@import "Partials/bottomNavBar";
-@import "Partials/hero";
-@import "Partials/ctaSection";
+@import "Partials/header";
 // /header
 // main
 @import "Partials/mainCommon";
