--- a/src/app.scss
+++ b/src/app.scss
@@ -16,6 +16,5 @@
 @import "Partials/mainBackgrounds";
 // /main
 // footer
-@import "Partials/topFooter";
-@import "Partials/bottomFooter";
+@import "Partials/footer";
 // /footer
