html fix: redefine '.abow_below_title' as H4

--- a/src/Partials/_mainSpecifics.scss
+++ b/src/Partials/_mainSpecifics.scss
@@ -15,7 +15,7 @@
     left: 50%;
     background-color: $mainA;
     border: 12px solid $green400;
-    & p,.section_title{
+    & .above_below_title,.section_title,.smooth_par{
       color:$white;
     }
     & .section_title{
