setting of sass architecture

--- a/src/Partials/layout/footer/_topFooter.scss
+++ b/src/Partials/layout/footer/_topFooter.scss
@@ -25,11 +25,11 @@
       }
       & li{
         flex-basis: 30px;
+        & i{
+          font-size: $iconXs;
+          color: $black;
+        }
       }
     }
   }
-}
-// Bottom Footer
-.bottom_footer{
-  background-color: $mainA;
 }
