hover on Bottom Nav Bar & // Top Footer links

--- a/src/Partials/layout/footer/_topFooter.scss
+++ b/src/Partials/layout/footer/_topFooter.scss
@@ -29,6 +29,9 @@
           font-size: $iconXs;
           color: $black;
         }
+        & a:hover{
+          color: #69bf14;
+        }
       }
     }
   }
