--- a/src/Partials/layout/footer/_bottomFooter.scss
+++ b/src/Partials/layout/footer/_bottomFooter.scss
@@ -5,6 +5,9 @@
     & a{
       color: $white;
       font-size: $parXxs;
+      & i{
+        font-size: $iconXs;
+      }
     }
     & li:not(:last-child){
       border-right: 1px solid $white;
