fix: min-width buttons

--- a/src/Partials/components/_buttons.scss
+++ b/src/Partials/components/_buttons.scss
@@ -10,6 +10,7 @@ button{
   letter-spacing: $spacingM;
   text-transform: $txt_Trsf;
   cursor: pointer;
+  min-width: 120px;
 }
 button:focus {
   outline: none;
