--- a/src/Partials/layout/header/_topNavBar.scss
+++ b/src/Partials/layout/header/_topNavBar.scss
@@ -1,10 +1,10 @@
 // Top Nav Bar
 .top_nav_bar{
   background-color: $mainA;
-  & i{
+  i{
     font-size: $iconS;
   }
-  & .calling{
+  .calling{
     color: $white;
     font-size: $parXs;
   }
