--- a/src/Partials/layout/main/_awardSection.scss
+++ b/src/Partials/layout/main/_awardSection.scss
@@ -2,7 +2,7 @@
 .award_section_wrapper{
   background: rgb(251,252,254);
   background: linear-gradient(180deg, rgba(251,252,254,1) 0%, rgba(241,245,248,1) 100%);
-  & button{
+  button{
     min-width: 200px;
   }
 }
