change $mainA color after client first request

--- a/src/Partials/utils/_variables.scss
+++ b/src/Partials/utils/_variables.scss
@@ -1,5 +1,5 @@
 // Main Colors
-$mainA:#69bf14; //green
+$mainA:#333333; //green //black after client request
 $mainB:#1975c0; //blue
 $green200:#77c932;
 $green400:#5ca323;
