--- a/src/Partials/layout/main/_testimonialsSection.scss
+++ b/src/Partials/layout/main/_testimonialsSection.scss
@@ -2,16 +2,16 @@
 .testimonials_section_wrapper{
   background-image: url('../img/avada-movers-testimonial-background.jpg');
   background-size: cover;
-  & .box{
-    & img{
+  .box{
+    img{
       border-radius: 50%;
       width: 40%;
     }
-    & p{
+    p{
       font-style: $italic;
     }
   }
-  & button{
+  button{
     min-width: 200px;
   }
 }
