mixin position absolute used in hero&ease sections

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 //Utils
 @import "Partials/utils/variables";
+@import "Partials/utils/mixins";
 @import "Partials/utils/helpers/mix";
 @import "Partials/utils/helpers/displayFlex";
 @import "Partials/utils/helpers/paddingMargin";
