--- a/src/Partials/layout/header/_hero.scss
+++ b/src/Partials/layout/header/_hero.scss
@@ -1,7 +1,7 @@
 // Hero
 .header_section{
-  position: relative;
   .hero_wrapper{
+    position: relative;
     height: 600px;
     position: relative;
     background-image: url('../img/herobackground.jpg');
@@ -9,9 +9,10 @@
     background-position: top left;
     background-size: cover;
     .container_m{
-      position: absolute;
-      top:50%;
-      left: 50%;
+      @include abs-pos(50%, auto, auto, 50%);
+      // position: absolute;
+      // top:50%;
+      // left: 50%;
       transform: translate(-50%,-50%);
     }
   }
