--- a/src/Partials/layout/main/_easeSection.scss
+++ b/src/Partials/layout/main/_easeSection.scss
@@ -4,9 +4,10 @@
   background-size:cover;
   position: relative;
   .container_m{
-    position: absolute;
-    top:25%;
-    left: 50%;
+    @include abs-pos (25%, auto, auto, 50%);
+    // position: absolute;
+    // top:25%;
+    // left: 50%;
     background-color: $mainA;
     border: 12px solid $green400;
     .above_below_title,.section_title,.smooth_par{
