mixin Background Img Cover used in hero, easeSection,testimonialsSection

--- a/src/Partials/layout/header/_hero.scss
+++ b/src/Partials/layout/header/_hero.scss
@@ -4,10 +4,9 @@
     position: relative;
     height: 600px;
     position: relative;
-    background-image: url('../img/herobackground.jpg');
-    background-repeat: no-repeat;
-    background-position: top left;
-    background-size: cover;
+    @include backgroundCover('../img/herobackground.jpg');
+    // background-image: url('../img/herobackground.jpg');
+    // background-size: cover;
     .container_m{
       @include abs-pos(50%, auto, auto, 50%);
       // position: absolute;
