--- a/src/Partials/utils/_mixins.scss
+++ b/src/Partials/utils/_mixins.scss
@@ -6,3 +6,8 @@
   left: $left;
   position: absolute;
 }
+// Background Image Cover
+@mixin backgroundCover ($url){
+  background-image:url($url);
+  background-size: cover;
+}
