mixin bckgrndimg fix: add defaulr rules

--- a/src/Partials/utils/_mixins.scss
+++ b/src/Partials/utils/_mixins.scss
@@ -10,4 +10,6 @@
 @mixin backgroundCover ($url){
   background-image:url($url);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
