--- a/src/Partials/components/_buttons.scss
+++ b/src/Partials/components/_buttons.scss
@@ -11,8 +11,12 @@ button{
   text-transform: $txt_Trsf;
   cursor: pointer;
   min-width: 120px;
-}
-button:focus {
-  outline: none;
-  box-shadow: none;
+  transition: all 1s;
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+  &:hover{
+    transform: scale(1.1);
+  }
 }
