--- a/src/Partials/layout/main/_testimonialsSection.scss
+++ b/src/Partials/layout/main/_testimonialsSection.scss
@@ -1,6 +1,6 @@
 // About Testimonials Section
 .testimonials_section_wrapper{
-  @include backgroundCover ('../img/avada-movers-testimonial-background.jpg',cover,center,no-repeat);
+  @include backgroundImg ('../img/avada-movers-testimonial-background.jpg',cover,center,no-repeat);
   // background-image: url('../img/avada-movers-testimonial-background.jpg');
   // background-size: cover;
   .box{
